fixing ie7 defects. including improper z-indexing on list page dropdowns and the non-rendering of the graph

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -40,8 +40,8 @@ animation:          fadeOut 400ms 1 ease-in;
       .side-by-side a.vn{width:49px; text-align: center;}
     .side-by-side .description{margin-left:150px;}
     
-.column-primary{width:65%; float:left;}
-.column-secondary{width:31%; float:left; margin:0 0 0 4%;}
+.column-primary{width:65%; float:left; position: relative;}
+.column-secondary{width:31%; float:left; margin:0 0 0 4%; position: relative;}
 
 @media (max-width:550px){
   .column-primary,.column-secondary{width:auto; float:none;}
